--- a/config/syslogserver.conf
+++ b/config/syslogserver.conf
@@ -1,8 +1,13 @@
+# provides UDP syslog reception
+$include REPLACELBPCONFIGDIR/udp.conf
+# provides TCP syslog reception
+$include REPLACELBPCONFIGDIR/tcp.conf
+
 # set group of the logfile to be readable
 $FileGroup loxberry
 
 # include plugin config files
-$IncludeConfig /opt/loxberry/config/plugins/syslogserver/rsyslog.d/*.conf
+$IncludeConfig REPLACELBPCONFIGDIR/rsyslog.d/*.conf
 
 # set group of the logfile to back to default for others
 $FileGroup adm
